--- a/html_css/style.css
+++ b/html_css/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 nav {
-    background-image: url(stars1.png);
+    background-image: url(elkouah_abderrahmane/img/stars1.png);
     height: 100vh;
     display: flex;
     justify-content: center;
